wrapping up some details and fixing tests

--- a/src/components/OptionBar/style.css
+++ b/src/components/OptionBar/style.css
@@ -12,7 +12,7 @@
   box-sizing: border-box;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.05);
   border-radius: 4px;
-  margin-left: 28px;
+  margin-left: 12px;
   padding: 5px;
   width: 100px;
   height: 100px;
@@ -34,6 +34,8 @@
   box-shadow: 0px 24px 38px rgba(0, 0, 0, 0.14);
   border-radius: 10px;
   margin: 0px 16px;
+  width: calc(100% - 2*16px);
+  max-width: 340px;
 }
 
 .copy-tooltip-hidden {
@@ -49,14 +51,14 @@
 
 .copy-tooltip-text {
   margin: 0;
-  width: 170px;
   text-align: start;
   font-weight: 600;
   font-size: 22px;
 }
 
 .copy-tooltip-separator {
-  margin: 13px 0px;
+  margin-top: 13px;
+  margin-bottom: 8px;
 }
 
 .copy-tooltip-arrow {
